complete rework for more clarity (10% done)

--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="main-container">
-    <div class="one">1</div>
-    <div class="two">2</div>
-    <div class="three">3</div>
-    <div class="four">4</div>
-    <div class="five">5</div>
-</div>
+    <div class="MainBody">
+        <div class="headerLinks">
+            <div class="HeaderLogo">HeaderLogo</div>
+            <div class="one"><a href="https://www.example.com">Header1</a></div>
+            <div class="two"><a href="https://www.example.com/about">Header2</a></div>
+            <div class="three"><a href="https://www.example.com/contact">Header3</a></div>        
+        </div>
+        <div class="MainBody2">
+            <div class="mB2Text"><H1>This Website is awesome</H1> <p>This website has some subtext that goes here under the main tilte. It's smaller font and the color is lower contrast</p> <button>Sign Up</button></div>
+            <div class="mB2Image"><img src="images/gray.jpg" alt="gray" width="600" height="400"></div>
+        </div>
+    </div>
+    
 </body>
 </html>
