--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/indexStyles.css">
 </head>
 <body>
     <div class="MainBody">
@@ -17,6 +17,12 @@
         <div class="MainBody2">
             <div class="mB2Text"><H1>This Website is awesome</H1> <p>This website has some subtext that goes here under the main tilte. It's smaller font and the color is lower contrast</p> <button>Sign Up</button></div>
             <div class="mB2Image"><img src="images/gray.jpg" alt="gray" width="600" height="400"></div>
+        </div>
+        <div class="mB3Text">Some Random Information</div>
+        <div class="MainBody3">           
+            <div class="mB3Fact1"><img src="images/gray.jpg" alt="" width="200" height="200"><br>This is some subtext under an illustration or image</div>
+            <div class="mB3Fact2"><img src="images/gray.jpg" alt="" width="200" height="200"><br>This is some subtext under an illustration or image</div>
+            <div class="mB3Fact3"><img src="images/gray.jpg" alt="" width="200" height="200"><br>This is some subtext under an illustration or image</div>
         </div>
     </div>
     
